Added router angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,15 @@
-<div *ngIf="today">
-  <header>
-    <h1>
-      <button type="button" class="button" [disabled]="isItToday()" (click)='displayPreviousDate()'>
-        &lt;&lt;
-      </button>
-      {{ appTitle }} - {{ shuttleDate | amLocale: 'fr' | amDateFormat: 'DD MMMM YYYY'}}
-      <button type="button" class="button" (click)='displayNextDate()'>&gt;&gt;</button>
-    </h1>
+<header>
+  <h1>{{ appTitle}}</h1>
 
-  </header>
-
-  <!-- Displaying all tours -->
-  <div class="tile" *ngFor="let tour of tours">
-    <div class="tile-hour">{{ tour.hour }}</div>
-    <div class="tile-places">{{ tour.availablePlaces }}</div>
-    <div class="outer-form">Here goes the form (but ...later)
-
-    </div>
-  </div>
-</div>
+  <ul>
+    <li>
+      <mat-icon (click)="goHome()" class="add-cursor">home</mat-icon>
+    </li>
+    <li>
+      <a [routerLink]="['login']">Login</a>
+    </li>
+  </ul>
+</header>
 
 <router-outlet></router-outlet>
 
